# custom-compiler-design

./: CMakeLists.txt  Makefile  README.md  lexer.l  parser.cpp  parser.hpp  parser.y
include/: ast.h  codegen.h  lexer.h  optimization.h  optimization_framework.h  parser.h  parser.hpp  register_allocator.h  runtime.h  symbol_table.h  type_system.h
src/: basic_block.cpp  codegen.cpp  lexer.cpp  main.cpp  optimization.cpp  parser.cpp  register_allocator.cpp  runtime.cpp  symbol_table.cpp  type_system.cpp
test/: test.c  test_runner.cpp
